[package]
name = "saddle-ai-goap-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["dev"]
dev = ["dep:bevy_brp_extras"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }
saddle-ai-goap = { workspace = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_brp_extras = { version = "0.19", optional = true }
bevy = { version = "0.18", features = ["bevy_remote"] }

[lints]
workspace = true
